continue creating app

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,8 +10,6 @@
     <string name="order_total">Итого:</string>
     <string name="common_multiplication">x</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_data_load">Ошибка загрузки данных</string>
     <string name="common_all">ВСЕ</string>
     <string name="common_products">Товары</string>
@@ -25,6 +23,8 @@
     <string name="error_implement_fragment_container">fragment must implement IFragmentContainer</string>
     <string name="order_empty_description">Добавьте товары из каталога, а затем выберите способ оплаты</string>
     <string name="order_no_items">Товаров нет</string>
-    <string name="common_zero">0</string>
+    <string name="common_zero">0.00</string>
+    <string name="common_zero_weight">0.0</string>
+
     <string name="order_payment_success">Платеж успешно совершен</string>
 </resources>
